# internal/services/gateway/route/notification.go
@@ -10,4 +10,5 @@ func notificationRoute(engine *gin.RouterGroup) {
 	notificationHandler := notification.NewNotificationHandler()
 	
 	engine.GET("/notification", middlewares.Auth(), notificationHandler.SendNotification)
+	engine.GET("/notification/history", middlewares.Auth(), notificationHandler.GetNotificationHistory)
 }
